# WikiSQL

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
wikidata_sql/: __init__.py  cli.py  client.py  parser.py  sparql.py
